--- a/QuickBuy.web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickBuy.web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,9 +20,14 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/produto"]'>Produto</a>
           </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Login</a>
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!usuarioLogado()">
+            <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Entrar</a>
           </li>
+
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioLogado()">
+            <a class="nav-tem nav-link text-dark" [routerLink]='["/sair"]' (click)="sair()">Sair</a>
+          </li>
+
         </ul>
       </div>
     </div>
