--- a/QuickBuy.web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.web/ClientApp/src/app/usuario/login/login.component.html
@@ -2,10 +2,49 @@
     <form class="form-signin">
         <h1 class="h4 mb-2 login">Login do Cliente</h1>
         <label for="inputEmail" class="sr-only"></label>
-        <input type="email" id="inputEmail" name="email" placeholder="Informe seu E-mail" class="form-control mb-2"/>
+        <input type="email" id="inputEmail" name="email" 
+        placeholder="Informe seu E-mail" 
+        class="form-control mb-2" 
+        [ngClass]="{
+            'is-invalid': email.invalid && (email.dirty || email.touched),
+            'is-valid': email.valid && (email.dirty || email.touched)
+        }"
+        [(ngModel)]="usuario.email" 
+        #email="ngModel" 
+        email
+        required/>
+
+        <div class="invalid-feedback mb-2" *ngIf="email.invalid && (email.dirty || email.touched)">
+            <div *ngIf= "email.errors.required">
+                Email é de preenchimento obrigatorio.
+            </div>
+            <div *ngIf= "email.errors.email">
+                Email não está no formato correto.
+            </div>
+        </div>
 
         <label for="inputSenha" class="sr-only"></label>
-        <input type="password" id="inputSenha" name="senha" placeholder="Senha" class="form-control mb-2" />
-        <button class="btn btn-primary btn-block" type="submit"> Entrar</button>
+        <input type="password" id="inputSenha" name="senha" 
+        placeholder="Senha" 
+        class="form-control mb-2" 
+        [(ngModel)]="usuario.senha"
+         [ngClass]="{
+            'is-invalid': senha.invalid && (senha.dirty || senha.touched),
+            'is-valid': senha.valid && (senha.dirty || senha.touched)
+         }"
+        #senha="ngModel"
+        required/>
+
+        <div class="invalid-feedback mb-2" *ngIf="senha.invalid && (senha.dirty || senha.touched)">
+            <div *ngIf="senha.errors.required">
+                Necessario senha 
+            </div>
+
+        </div>
+        <button class="btn btn-primary btn-block" type="submit" (click)="entrar()"> Entrar</button>
+        <img src="../../../assets/quickLogo.jpg"/>
+        <div class="alert alert-primary" role="alert" *ngIf="usuarioAutenticado">
+                Usuario Autenticado !
+        </div>
     </form>
 </div>
