Implementação de serviços para WEB API e ajustes template Angular

--- a/QuickBuy.web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.web/ClientApp/src/app/usuario/login/login.component.html
@@ -41,8 +41,17 @@
             </div>
 
         </div>
-        <button class="btn btn-primary btn-block" type="submit" (click)="entrar()"> Entrar</button>
+        <button class="btn btn-primary btn-block" type="submit" (click)="entrar()" [disabled]="ativar_spinner"> 
+        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="ativar_spinner"></span>
+            Entrar
+        </button>
+        
+        <div class="alert alert-danger" *ngIf="mensagem">
+                {{ mensagem }} 
+        </div>
+
         <img src="../../../assets/quickLogo.jpg"/>
+        
         <div class="alert alert-primary" role="alert" *ngIf="usuarioAutenticado">
                 Usuario Autenticado !
         </div>
